# compose

./: .gitignore  README.md
_template/: .dockerignore  Dockerfile  README.md  docker-compose.yml
hermes/: .dockerignore  .env.example  Dockerfile  README.md  config.sample.json  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
hermes-camoufox/: .dockerignore  .env.example  Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yml
hermes/minihermes/: __init__.py  agent.py  cli.py  codex.py  config.py  credentials.py  http.py  llm.py  logging.py  memory.py  pinchtab.py  telegram.py  tools.py  web.py
